@@ -98,6 +98,28 @@ abstract class BaseGradleImplDepsIntegrationTest extends AbstractIntegrationSpec
         buildFile.toString()
     }
 
+    static String testablePluginProjectWithAddOpens(String appliedLanguagePlugin = applyGroovyPlugin()) {
+        return """
+            ${testablePluginProject(appliedLanguagePlugin)}
+            // Needed when using ProjectBuilder
+            class AddOpensArgProvider implements CommandLineArgumentProvider {
+                private final Test test;
+                public AddOpensArgProvider(Test test) {
+                    this.test = test;
+                }
+                @Override
+                Iterable<String> asArguments() {
+                    return test.javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)
+                        ? ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+                        : []
+                }
+            }
+            tasks.withType(Test).configureEach {
+                jvmArgumentProviders.add(new AddOpensArgProvider(it))
+            }
+        """
+    }
+
     static void assertSingleGenerationOutput(String output, String regex) {
         def pattern = /\b${regex}\b/
         def matcher = output =~ pattern
